fix(pattern/accordion): remove visible hidden

--- a/packages/styles/components/_c.accordion.scss
+++ b/packages/styles/components/_c.accordion.scss
@@ -49,8 +49,7 @@
     max-height: 0;
     overflow: hidden;
     padding-left: $mu050;
-    transition: max-height 0.3s ease-out, padding 0.3s linear;
-    visibility: hidden;
+    transition: 0.3s ease;
   }
 
   &__trigger {
@@ -63,7 +62,7 @@
         padding-top: $mu050;
         padding-bottom: calc(#{$mu150} - #{get-border(s)});
         visibility: visible;
-        transition: max-height 0.3s ease-out;
+        transition: 0.3s ease;
       }
     }
 
